--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Отзывчивый сайт</title>
+  <title>Отзывчивый сайт с изображениями</title>
   <style>
     /* Общие стили для всего сайта */
     body {
@@ -130,4 +130,5 @@
 
 </body>
 </html>
+
 
